--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,21 @@
     display: table-header-group;
   }
 }
+html {
+  font-family: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+  Roboto, 'Helvetica Neue', Arial, sans-serif;
+  font-size: 0.75rem;
+  word-spacing: 1px;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+}
+
+body {
+  font-size: 1rem;
+}
 
 .profile-basics-header, .work-history-header {
   background-color: deepskyblue;
